# weight-height-predictor

./: DataTransform.py  LinearRegresson.py  LogisticRegresson.py  Predictor.py  README.md  pyproject.toml  readme.txt
old/: predictor.py
weight_height_predictor/: __main__.py  data_transform.py  logistic_regressor.py  predictor.py  schemas.py
